--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     <link rel="stylesheet" href="loginDesign.css">
 </head>
 
-<body>        
+<body>
     <div class="container1" id="initialContent">
         <!-- Contenido inicial -->
-        <form action="/login" method="POST" action="ValidaAcceso.php">
+        <form method="POST" action="ValidaAcceso.php">
             <h1>Iniciar sesión</h1>
-            <label for="">Usuario:</label>
-            <input type="text" name="username" id="username">
+            <label for="inputUsuario">Usuario:</label>
+            <input type="text" name="inputUsuario" id="inputUsuario">
             <br>
-            <label for="">Contraseña:</label>
-            <input type="password" name="password" id="password">
+            <label for="inputPassword">Contraseña:</label>
+            <input type="password" name="inputPassword" id="inputPassword">
             <br>
             <input type="submit" value="Enviar" class="boton_enviar">
-            <hr class="x-component x-component-default" style="border-color:#ececec;margin:auto;width:60%;" id="box-1034">
+            <hr class="x-component x-component-default" style="border-color:#ececec;margin:auto;width:60%;"
+                id="box-1034">
             <a href="#" class="boton_registrarse" onclick="showRegistrationOptions()">Registrarse</a>
         </form>
     </div>
@@ -29,8 +30,12 @@
     <div class="container2" id="registrationOptions" style="display: none;">
         <h1>Registro de alumno</h1>
         <h2 class="espacio">espacio</h2>
-        <form>
+        <form action="RegistroAlumno.php" method="POST">
             <div class="grid-container">
+                <div>
+                    <label for="expediente">Expediente:</label>
+                    <input type="number" name="expediente" id="expediente" required>
+                </div>
                 <div>
                     <label for="nombre">Nombre:</label>
                     <input type="text" name="nombre" id="nombre" required>
@@ -44,25 +49,26 @@
                     <input type="text" name="apellidoMaterno" id="apellidoMaterno" required>
                 </div>
                 <div>
-                    <label for="expediente">Expediente:</label>
-                    <input type="number" name="expediente" id="expediente" required>
-                </div>
-                <div>
-                    <label for="carrera">Carrera:</label>
-                    <select name="carrera" id="carrera" required>
-                        <option value="" disabled selected>Selecciona...</option>
-                        <option value="option1">option1</option>
-                        <option value="option2">option2</option>
-                        <option value="option3">option3</option>
-                    </select>
+                    <label for="telefono">Teléfono:</label>
+                    <input type="text" name="telefono" id="telefono" maxlength="10"
+                        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)" required>
                 </div>
                 <div>
                     <label for="correo">Correo electrónico:</label>
                     <input type="email" name="correo" id="correo" required>
                 </div>
                 <div>
-                    <label for="telefono">Teléfono:</label>
-                    <input type="text" name="telefono" id="telefono" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)" required>
+                    <label for="periodo">Periodo:</label>
+                    <input type="number" name="periodo" id="periodo" required>
+                </div>
+                <div>
+                    <label for="programa">Programa:</label>
+                    <select name="programa" id="programa" required>
+                        <option value="" disabled selected>Selecciona...</option>
+                        <option value="option1">option1</option>
+                        <option value="option2">option2</option>
+                        <option value="option3">option3</option>
+                    </select>
                 </div>
             </div>
             <input type="submit" value="Guardar" class="boton_enviar">
@@ -70,7 +76,18 @@
                 <p>Regresar</p>
             </button>
         </form>
-    </div>        
-    <script src="registration_options.js"></script>
+    </div>
+
+    <!-- Pop-up oculto inicialmente -->
+    <div id="popup" class="popup" style="display: none;">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup()">&times;</span>
+            <p id="popup-text"></p>
+            <button id= "copy-btn" class="copy-btn" onclick="copyToClipboard()">&#x1F4CB; Copiar</button>
+        </div>
+    </div>
+
+    <script src="funcionalidades.js"></script>
 </body>
+
 </html>
