EscudoFIF en index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container1" id="initialContent">
         <!-- Contenido inicial -->
         <form method="POST" action="ValidaAcceso.php">
+            <img src="EscudoFIF.png" class="escudofif" alt="escudofif">
             <h1>Iniciar sesión</h1>
             <label for="inputUsuario">Usuario:</label>
             <input type="text" name="inputUsuario" id="inputUsuario">
@@ -26,10 +27,10 @@
             <a href="#" class="boton_registrarse" onclick="showRegistrationOptions()">Registrarse</a>
         </form>
     </div>
-    <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
+    <p class="mb-3">&copy; 2024</p>
     <div class="container2" id="registrationOptions" style="display: none;">
         <h1>Registro de alumno</h1>
-        <h2 class="espacio">espacio</h2>
+        <span class="espacio">espacio</span>
         <form action="RegistroAlumno.php" method="POST">
             <div class="grid-container">
                 <div>
