Agregando framework bootstrap

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#" class="boton_registrarse" onclick="showRegistrationOptions()">Registrarse</a>
         </form>
     </div>
-    <p class="mb-3">&copy; 2024</p>
+    <p class="año">&copy; 2024</p>
     <div class="container2" id="registrationOptions" style="display: none;">
         <h1>Registro de alumno</h1>
         <span class="espacio">espacio</span>
