Ya hace alta de Docentes y los registra

--- a/index.html
+++ b/index.html
@@ -59,16 +59,15 @@
                     <input type="email" name="correo" id="correo" required>
                 </div>
                 <div>
-                    <label for="periodo">Periodo:</label>
-                    <input type="number" name="periodo" id="periodo" required>
-                </div>
-                <div>
                     <label for="programa">Programa:</label>
                     <select name="programa" id="programa" required>
                         <option value="" disabled selected>Selecciona...</option>
-                        <option value="option1">option1</option>
-                        <option value="option2">option2</option>
-                        <option value="option3">option3</option>
+                        <option value="DITE">DITE (Doctorado en Innovación en Tecnología educativa)</option>
+                        <option value="DTE">DTE (Doctorado en Tecnología Educativa)</option>
+                        <option value="DCC">DCC (Doctorado en Ciencias de la Computación)</option>
+                        <option value="MCC">MCC (Maestría en Ciencias de la Computación)</option>
+                        <option value="MSC">MSC (Maestría en Sistemas Computacionales)</option>
+                        <option value="MIEVEA">MIEVEA (Maestría en Innovación de Entornos Virtuales de Enseñanza y Aprendizaje)</option>
                     </select>
                 </div>
             </div>
