Cambios en bd y agendar evaluacion

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <option value="MCC">MCC (Maestría en Ciencias de la Computación)</option>
                         <option value="MSC">MSC (Maestría en Sistemas Computacionales)</option>
                         <option value="MIEVEA">MIEVEA (Maestría en Innovación de Entornos Virtuales de Enseñanza y Aprendizaje)</option>
+                        <option value="MCD">MCD (Maestría en Ciencia De Datos)</option>
                     </select>
                 </div>
             </div>
