Reestructuración del proyecto

--- a/Interfaces/Index/index.html
+++ b/Interfaces/Index/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posgrado FIF</title>
-    <link rel="stylesheet" href="loginDesign.css">
+    <link rel="stylesheet" href="../../CSS/loginDesign.css">
 </head>
 
 <body>
     <div class="container1" id="initialContent">
         <!-- Contenido inicial -->
         <form method="POST" action="ValidaAcceso.php">
-            <img src="EscudoFIF.png" class="escudofif" alt="escudofif">
+            <img src="../../Imagenes/EscudoFIF.png" class="escudofif" alt="escudofif">
             <h1>Iniciar sesión</h1>
             <label for="inputUsuario">Usuario:</label>
             <input type="text" name="inputUsuario" id="inputUsuario">
@@ -22,7 +22,7 @@
             <div class="password-container">
                 <input type="password" name="inputPassword" id="inputPassword">
                 <button type="button" id="togglePassword" class="toggle-password">
-                    <img src="eye-icon.png" alt="Mostrar/Ocultar contraseña" class="eye-icon">
+                    <img src="../../Imagenes/eye-icon.png" alt="Mostrar/Ocultar contraseña" class="eye-icon">
                 </button>
             </div>
             <br>
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <script src="funcionalidades.js"></script>
+    <script src="../../JS/script.js"></script>
 </body>
 
 </html>
