Update index title, adjust form action paths, and enhance CSS styles for better responsiveness. Implement session handling in AsignarSinodo.php and improve AJAX error handling in script.js.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posgrado FIF</title>
+    <title>SSAP</title>
     <link rel="stylesheet" href="CSS/login.css">
     <link rel="stylesheet" href="CSS/transitions.css">
 </head>
@@ -37,7 +37,7 @@
     <div class="container2" id="registrationOptions" style="display: none;">
         <h1>Registro de alumno</h1>
         <span class="espacio">espacio</span>
-        <form action="RegistroAlumno.php" method="POST">
+        <form action="Interfaces/Index/RegistroAlumno.php" method="POST">
             <div class="grid-container">
                 <div>
                     <label for="expediente">Expediente:</label>
